Add method for get orders from eternal service
